# dotenv-c

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: config.cmake.in
src/: dotenv.c  dotenv.h
test/: env_test.c
